--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="inner">
 
         <header>
-          <h1>Alex-yong.GitHub.io</h1>
+          <h1>hello world</h1>
           <h2></h2>
         </header>
 
